Retrieved and displayed data from the database to the front

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,4 +15,9 @@ p {
   margin-bottom: 40px;
 }
 
+.read_more {
+  float: left;
+  padding-bottom: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
